Sistema de vidas y corazones HTML +JS _ class 16

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="messages">
       <!-- Pendiente TODO -->
-      <p>Párrafo de ejemplo</p>
+      <p>VIDAS: <span id="lives"></span></p>
     </div>
 
   </div>
