Sistema de Tiempo y puntajes  _ class 17

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="messages">
       <!-- Pendiente TODO -->
       <p>VIDAS: <span id="lives"></span></p>
+      <p>TIEMPO: <span id="time"></span></p>
     </div>
 
   </div>
