Implementación de PANTALLA DE INICIO

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Jefrys - Jueguito online de carreras y calaveras</title>
 </head>
 <body>
+  <article class="welcome-message inactive">
+    <p> ¡BIENVENIDO! </p>
+    <i class="fa-solid fa-gamepad"></i>
+    <button class="button--standar" id="initial-play">EMPEZAR</button>
+  </article>
   <main>
     <div class="game-container">
       <canvas id="game"></canvas>
