MEJORA: tarjeta de alert para nuevo record

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <i class="fa-solid fa-gamepad"></i>
     <button class="button--standar" id="initial-play">EMPEZAR</button>
   </article>
+  <article class="message--record inactive">
+      <p>¡Felicitaciones, ha conseguido un nuevo récord!</p>
+      <i class="fa-solid fa-ranking-star"></i>
+      <p>Nuevo récord: <span class="new--record">20.00</span></p>
+      <button class="button--standar" id="record-play-again">Jugar de nuevo</button>
+
+    </article>
   <main>
     <div class="game-container">
       <canvas id="game"></canvas>
@@ -32,6 +39,7 @@
       </div>
   
     </div>
+    
   </main>
   
     <script src="./js/maps.js"></script>
