Mejora de mensajes al subir un nivel

--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
       <i class="fa-solid fa-ranking-star"></i>
       <p>Nuevo récord: <span class="new--record">20.00</span></p>
       <button class="button--standar" id="record-play-again">Jugar de nuevo</button>
-
     </article>
+  <article class="win-without-record inactive">
+    <p>¡Ha superado todos los niveles</p>
+    <i class="fa-solid fa-trophy"></i>
+    <button class="button--standar" id="record-play-again2">Jugar de nuevo</button>
+  </article>
+  <article class="message--defeat inactive">
+    <p>¡GAME OVER!</p>
+    <i class="fa-solid fa-ghost"></i>
+    <button class="button--standar" id="record-play-again3">Jugar de nuevo</button>
+
+  </article>
   <main>
     <div class="game-container">
       <canvas id="game"></canvas>
